--- a/docs/article/芷溪列传.md
+++ b/docs/article/芷溪列传.md
@@ -10,7 +10,7 @@
 
 感谢这位大佬提供的素材，这里不方便透露信息
 
-![](/others/zxlz/5e5ba0836986e630.png)
+![](/others/zxlz/0.png)
 
 在这一段中，只是一个人的了解，不是完整的事件，比较重要的内容我会粗体标出
 
@@ -28,16 +28,16 @@
 
 然后他就加进了大佬的QQ群，进行更深入的交流，对此，大佬的回复
 
-![](/others/zxlz/2b251872c2867a33.png)而后复制哥的评价是 （原素材提供时是这样称呼）
+![](/others/zxlz/1.png)而后复制哥的评价是 （原素材提供时是这样称呼）
 
 " **我都学了半年**** Java ****，你们看不起我？！"**
 
-![](/others/zxlz/dcd451d956f8c150.png)
+![](/others/zxlz/2.png)
 
 后面遭到各位大佬的一致攻击。后面就不知道他去哪里了
 
-![](/others/zxlz/34971ee3b4ebf341.png) ![](/others/zxlz/5eebc28625856528.png)
-
+![](/others/zxlz/3.png)
+![](/others/zxlz/4.png)
 
 
 直到2023/1/24
@@ -60,7 +60,7 @@
 
 b站言论补充
 
-![](/others/zxlz/1b72750ef5f7ff34.png)
+![](/others/zxlz/5.png)
 
 ## 部分事件
 
@@ -70,17 +70,20 @@ b站言论补充
 
 ### 用yum辅助自己写插件
 
-![](/others/zxlz/87fd05b4238719c3.png)
+![](/others/zxlz/6.png)
 
 相关言论比较久，不太好找
 
 ### TAB插件RGB颜色
 
-![](/others/zxlz/7b96fffd326d30f5.png) ![](/others/zxlz/87b9dd94b1e97cd6.png) ![](/others/zxlz/6d9f2d05b0cd1cba.png)
+![](/others/zxlz/7.png)
+![](/others/zxlz/8.png)
+![](/others/zxlz/9.png)
 
 芷溪对于此事的回应
 
-![](/others/zxlz/cbacf5f9da26d5c6.png) ![](/others/zxlz/5cba93856b3fd5cd.png)
+![](/others/zxlz/10.png)
+![](/others/zxlz/11.png)
 
 告诉他文档只是个示例，不是直接让他复制的，可是他很固执
 
@@ -90,7 +93,7 @@ b站言论补充
 
 复制哥由此而来
 
-![](/others/zxlz/5cc72ec57fee93c8.png)
+![](/others/zxlz/12.png)
 
 
 ### lp权限组剩余时间
@@ -99,7 +102,7 @@ b站言论补充
 
 他问为什么他输出的变量是空白
 
-![](/others/zxlz/a0d8404ee9210919.png)这是文档的内容
+![](/others/zxlz/13.png)这是文档的内容
 
 群里大佬把文档截图给他看，重点截图 临时权限组 不在这个权限组返回空白之类的这些话
 
@@ -109,11 +112,11 @@ b站言论补充
 
 然后群里大佬让他lp editor，结果他截图截一小块，大概这个样子
 
-![](/others/zxlz/4df9259e3e9240b3.png)
+![](/others/zxlz/14.png)
 
 群内大佬让他截图全，他截图全了，接着群里大佬在他截图上进行截图，模仿如下：
 
-![](/others/zxlz/abfe8972c1b963fe.png)
+![](/others/zxlz/15.png)
 
 群内大佬重点截图了文档中 临时权限组 几个字
 
@@ -148,34 +151,39 @@ b站言论补充
 
 布莱克群一致对外，他就加了trmenu群，然后装不认识我
 
-![](/others/zxlz/c7b650f73ae53081.png) ![](/others/zxlz/4802bd4e9a1753d3.png)
+![](/others/zxlz/16.png)
+![](/others/zxlz/17.png)
 
-![](/others/zxlz/5f4e3fb9b228c20e.png) ![](/others/zxlz/b5ca06bc2e32fa4.png)
+![](/others/zxlz/18.png)
+![](/others/zxlz/19.png)
 
-![](/others/zxlz/30fcec9864f364b6.png)
+![](/others/zxlz/20.png)
 
-![](/others/zxlz/7292c2b17419aaa7.png) ![](/others/zxlz/94c1680fb8033758.png)
+![](/others/zxlz/21.png)
+![](/others/zxlz/22.png)
 
 
 
 ### 正义人
 
 
-![](/others/zxlz/92681f1b65abf564.jpg)
+![](/others/zxlz//92681f1b65abf564.jp.png)
 
 
 
 芷溪正义人的做法
 
-![](/others/zxlz/449182415f533e4f.png) ![](/others/zxlz/101b3ddcf53f724a.png) ![](/others/zxlz/6bbf946f4b75180b.jpg)
+![](/others/zxlz/23.png)
+![](/others/zxlz/24.png)
+![](/others/zxlz//6bbf946f4b75180b.jp.png)
 
 当我再去加时
 
-![](/others/zxlz/5555ba96c6a218b6.jpg)
+![](/others/zxlz//5555ba96c6a218b6.jp.png)
 
-![](/others/zxlz/c2e7ff394e4ff98e.png)
+![](/others/zxlz/25.png)
 
-![](/others/zxlz/f90525f1e34ac2bd.png)
+![](/others/zxlz/26.png)
 
 在spigot里怎么写一个自定义事件并且在主类中调用它？
 
@@ -187,15 +195,16 @@ b站言论补充
 
  看到文章后芷溪大佬的回应
 
-![](/others/zxlz/9a3a94df272102b1.jpg)
+![](/others/zxlz//9a3a94df272102b1.jp.png)
 
 
 
-  ![](/others/zxlz/a5221d5658931b58.jpg)
+![](/others/zxlz//a5221d5658931b58.jp.png)
 
-  ![](/others/zxlz/b3243d9a5cc59694.png)
+![](/others/zxlz/27.png)
 
-  ![](/others/zxlz/3615ed17ddfa834f.png) ![](/others/zxlz/caefd3c0214fe07c.png) ![](/others/zxlz/49a7c2cfcca30f56.png)
+![](/others/zxlz/28.png)
+![](/others/zxlz/29.png)![](/others/zxlz/30.png)
 
  这里的。。。和一开始说的芷溪，是同一个人，这个只是他的小号而已，也就是我们的复制哥，不要小看我们的复制哥，论嘴硬和不认账，他称第二，我们是不敢称第一的，因为我们都没那么厚的脸皮
 
@@ -207,9 +216,9 @@ b站言论补充
 
  在这之后他主动加了我，请求我删文章，截图几句给大家看看
 
-![](/others/zxlz/3b8b40cadf2dad21.jpg) ![](/others/zxlz/1b71b17f05df6ae8.jpg)
+![](/others/zxlz//3b8b40cadf2dad21.jp.png) ![](/others/zxlz//1b71b17f05df6ae8.jp.png)
 
-![](/others/zxlz/9c577c919d0751ae.png)
+![](/others/zxlz/31.png)
 
 ## 退圈
 
@@ -217,11 +226,11 @@ b站言论补充
 
 时间：2023年1月27日晚上
 
-![](/others/zxlz/f13938226ace270d.png)
+![](/others/zxlz/32.png)
 
 我不理解，这便是行使正义的方式
 
-![](/others/zxlz/666ff1bbb2a763e1.jpg)
+![](/others/zxlz//666ff1bbb2a763e1.jp.png)
 
 关于芷溪大佬的事远不如此，还有更多的事情我没能写出来，非常抱歉！
 
@@ -233,105 +242,105 @@ b站言论补充
 
 这篇文章正好被这位看到了
 
-![](/others/zxlz/73cceebacd439271.png)
+![](/others/zxlz/33.png)
 
-![](/others/zxlz/c58853a5f1c0bc57.png)
+![](/others/zxlz/34.png)
 
 所以就有了...、
 
 ### 怎么在主类中使用另一个类的方法？
 
-![](/others/zxlz/aca3e9c3370a4c90.png)
+![](/others/zxlz/35.png)
 
-![](/others/zxlz/7ec8dacac166a7f5.png)
+![](/others/zxlz/36.png)
 
 说好的截图呢，怎么直接把源码用文本发来
 
 看我多照顾你们的体验
 
-![](/others/zxlz/aea8655766faa6d7.png)
+![](/others/zxlz/37.png)
 
 ### 怎么赋值啊
 
-![](/others/zxlz/9960133ecf315188.png)
+![](/others/zxlz/38.png)
 
 ### 填什么参数？
 
-![](/others/zxlz/d2938d1be934f444.png)
+![](/others/zxlz/39.png)
 
 ### 我tm会Java啊
 
-![](/others/zxlz/9a2910363b90bad6.png)
+![](/others/zxlz/40.png)
 
 ### 我TM问个问题就说我Java不好
 
-![](/others/zxlz/8adef0616ea973f9.png)
+![](/others/zxlz/41.png)
 
 ### 这个做不到所以才来问的
 
-![](/others/zxlz/39dea4d9848d367f.png)
+![](/others/zxlz/42.png)
 
-![](/others/zxlz/d51bc7b7acd032e0.png)
+![](/others/zxlz/43.png)
 
-![](/others/zxlz/cd457c5bd16572cd.png)
+![](/others/zxlz/44.png)
 
 ### 你是sb吗？
 
-![](/others/zxlz/510a9ffc6f16e162.png)
+![](/others/zxlz/45.png)
 
 ### 不如你牛逼 艹
 
-![](/others/zxlz/348a6138fd28cbaf.png)
+![](/others/zxlz/46.png)
 
 ### 脑瘫 我不知道怎么说这段
 
-![](/others/zxlz/f1564f6bb90748f8.png)
+![](/others/zxlz/47.png)
 
-![](/others/zxlz/a127eeb5c01c99.png)
+![](/others/zxlz/48.png)
 
-![](/others/zxlz/9c998e96465a75ec.png)
+![](/others/zxlz/49.png)
 
 ### 教你数学老师java也比教你强的
 
-![](/others/zxlz/da57f5d9ce1e9357.png)
+![](/others/zxlz/50.png)
 
 ### 没 有 提 示
 
-![](/others/zxlz/ea7956a697114059.png)
+![](/others/zxlz/51.png)
 
-![](/others/zxlz/cfae7e72ac4e46d6.png)
+![](/others/zxlz/52.png)
 
 ### 灵活的会与不会
 
-![](/others/zxlz/1bdeecc02009131a.png)
+![](/others/zxlz/53.png)
 
 ### 不会java基础跟写插件有什么关系？
 
-![](/others/zxlz/62d4a050be36bcf2.png)
+![](/others/zxlz/54.png)
 
-![](/others/zxlz/66442e86decdc762.png)
+![](/others/zxlz/55.png)
 
-![](/others/zxlz/3653a37334593999.png)
+![](/others/zxlz/56.png)
 
-![](/others/zxlz/c71875397844840c.png)
+![](/others/zxlz/57.png)
 
 ### 大佬一定自己写的名为java的语言自己用
 
-![](/others/zxlz/468a73ab3f7d5bc4.png)
+![](/others/zxlz/58.png)
 
-![](/others/zxlz/8685f92ed60bc204.png)
+![](/others/zxlz/59.png)
 
-![](/others/zxlz/cf752366f0253ccb.png)
+![](/others/zxlz/60.png)
 
-![](/others/zxlz/c8064b9f60d1da2e.png)
+![](/others/zxlz/61.png)
 
-![](/others/zxlz/cdb45bea0e2995cb.png)
+![](/others/zxlz/62.png)
 
-![](/others/zxlz/3fe2641e56c6bb3a.png)
+![](/others/zxlz/63.png)
 
-![](/others/zxlz/10a2f7ec38bb3e5c.png)
+![](/others/zxlz/64.png)
 
-![](/others/zxlz/feb187e52f5066c7.png)
+![](/others/zxlz/65.png)
 
 ## 白色的小熊被封号
 
@@ -343,9 +352,9 @@ b站言论补充
 
 (出处: Minecraft(我的世界)中文论坛)
 
-![](/others/zxlz/a2ab2ee3a3f1f8eb.png)
+![](/others/zxlz/66.png)
 
-![](/others/zxlz/f63eb86bfac8d7d7.png)
+![](/others/zxlz/67.png)
 
 ## 怎么又过来
 
@@ -355,7 +364,7 @@ b站言论补充
 
 [程杰列传](../4sua6s)
 
-![](/others/zxlz/9b8af4fd8859dbb6.png)
+![](/others/zxlz/68.png)
 
 我直接在mcbbs茶馆发我整理的yumc乐子，我还真没想过被封呢
 
@@ -363,35 +372,35 @@ b站言论补充
 
 大家自己品品
 
-![](/others/zxlz/2ed754ceb321e5a0.png)
+![](/others/zxlz/69.png)
 
 ### 呜呜呜对不起我错了
 
-![](/others/zxlz/ebae21c82e22e7eb.png)
+![](/others/zxlz/70.png)
 
 ### 开始有围观的了
 
-![](/others/zxlz/27f104b07517c09b.png)
+![](/others/zxlz/71.png)
 
 目前，很多还是我自己编辑的
 
-![](/others/zxlz/cd8e748efa7c6cbe.png)
+![](/others/zxlz/72.png)
 
 ### 诽谤 抹黑
 
-![](/others/zxlz/e3969a8e7d08f578.png)
+![](/others/zxlz/73.png)
 
 ### 《就算是真的》
 
 你是哪个sb明星的粉丝吗
 
-![](/others/zxlz/4f736017031114f3.png)
+![](/others/zxlz/74.png)
 
-![](/others/zxlz/2fe144799d2521ef.png)
+![](/others/zxlz/75.png)
 
-![](/others/zxlz/794257b9ab34cd97.png)
+![](/others/zxlz/76.png)
 
-![](/others/zxlz/2edd54bd06cad19b.png)
+![](/others/zxlz/77.png)
 
 ### 真理
 
@@ -401,132 +410,132 @@ B:怎么诽谤的
 
 A:他们把我做过的事说了一遍
 
-![](/others/zxlz/53753a363ae6a038.png)
+![](/others/zxlz/78.png)
 
-![](/others/zxlz/f88a8aa2f1b92c3b.png)
+![](/others/zxlz/79.png)
 
-![](/others/zxlz/b8668be668365d8.png)
+![](/others/zxlz/80.png)
 
-![](/others/zxlz/2b775ec0deb706a4.png)
+![](/others/zxlz/81.png)
 
 ### 大佬看不惯繁体字
 
-![](/others/zxlz/b803cfae020885db.png)
+![](/others/zxlz/82.png)
 
 ### 真理-总结
 
-![](/others/zxlz/d49e54974123a2bd.png)
+![](/others/zxlz/83.png)
 
-![](/others/zxlz/e10d49d607e74752.png)
+![](/others/zxlz/84.png)
 
 ### 《即使都是真的》《你说是吧》
 
-![](/others/zxlz/e95d117adc6cc1c4.png)
+![](/others/zxlz/85.png)
 
 ### 我掩盖啥了？
 
 你确实没掩盖，你想掩盖，但是盖不住
 
-![](/others/zxlz/9627ed39e6a1225e.png)
+![](/others/zxlz/86.png)
 
 ### 改不改和你有关系吗？
 
 哦？那您到底是改了还是没改呢？
 
-![](/others/zxlz/4c31d4a1bc4e1b17.png)
+![](/others/zxlz/87.png)
 
 ### "正义的责问"
 
 又开始这样子了，自己以为自己站在"正义"的一方
 
-![](/others/zxlz/8a4b9ee4ceec51ed.png)
+![](/others/zxlz/88.png)
 
 ### 真理-朽木不可雕
 
-![](/others/zxlz/f5211ecc36e05784.png)
+![](/others/zxlz/89.png)
 
-![](/others/zxlz/db5511896f633278.png)
+![](/others/zxlz/90.png)
 
-![](/others/zxlz/712f0cac2762100f.png)
+![](/others/zxlz/91.png)
 
-![](/others/zxlz/aaf8086bc5f32a22.png)
+![](/others/zxlz/92.png)
 
 ### 。。6
 
 其实吧，确实关掉了，因为当时我是发布成网页的
 
-![](/others/zxlz/8c2270cfe60fa0a8.png)
+![](/others/zxlz/93.png)
 
 我确实是关掉这个网页了
 
 就他那个截图那时候的聊天，聊完发trmenu群（还是布莱克群来着？）大家都觉得你很好笑，建议我不要删文档
 
-![](/others/zxlz/77f9b3d5a68d204a.png)
+![](/others/zxlz/94.png)
 
-![](/others/zxlz/62818e89a71c5ff8.png)
+![](/others/zxlz/95.png)
 
 当时我以为他知道我说的网页指的是什么hh
 
-![](/others/zxlz/eb33fbe22db3cc88.png)
+![](/others/zxlz/96.png)
 
-![](/others/zxlz/d4b377b2e7acbc89.png)
+![](/others/zxlz/97.png)
 
-![](/others/zxlz/44834414636f77cc.png)
+![](/others/zxlz/98.png)
 
-![](/others/zxlz/db3872e6c063a4c9.png)
+![](/others/zxlz/99.png)
 
-![](/others/zxlz/3c47d575958aea77.png)
+![](/others/zxlz/100.png)
 
-![](/others/zxlz/9643b17407004b74.png)
+![](/others/zxlz/101.png)
 
 ### 您这么以自我为中心的吗
 
-![](/others/zxlz/c866e3d65c126876.png)
+![](/others/zxlz/102.png)
 
-![](/others/zxlz/7684c9ec7f6d7b45.png)
+![](/others/zxlz/103.png)
 
 ### 看私聊
 
-![](/others/zxlz/f2feed5abe918928.png)
+![](/others/zxlz/104.png)
 
 请您不要去祸害插件，非常感谢
 
 #### 即 看说的是不是事实
 
-![](/others/zxlz/d7bfff7e5bb569d2.jpg)
+![](/others/zxlz//d7bfff7e5bb569d2.jp.png)
 
 ### 又来了
 
-![](/others/zxlz/b38359a1a156501e.png)
+![](/others/zxlz/105.png)
 
-![](/others/zxlz/4e3d9d3feeb6ede6.png)
+![](/others/zxlz/106.png)
 
-![](/others/zxlz/a1b9e4e027af99b7.png)
+![](/others/zxlz/107.png)
 
 这只是一小部分，他又用起了他可笑的软件/脚本
 
 ### 就怪好笑的
 
-![](/others/zxlz/baaf4dce2ef5c1f9.jpg)
+![](/others/zxlz//baaf4dce2ef5c1f9.jp.png)
 
 ### 看一下这里头的内容
 
-![](/others/zxlz/d52e15aed3ac0de2.png)
+![](/others/zxlz/108.png)
 
 这一个真的太弱智了，他不会以为真能删吧
 
-![](/others/zxlz/1c336682c3651ee5.png)
+![](/others/zxlz/109.png)
 
 还有这一个赚钱方法.zip
 
-![](/others/zxlz/1038265467c43a19.png)
+![](/others/zxlz/110.png)
 
-![](/others/zxlz/8940e0bf43f651ce.png)
+![](/others/zxlz/111.png)
 
 这个jar才2kb，里面两个class
 
-![](/others/zxlz/8445a3725aa2aed6.png)
+![](/others/zxlz/112.png)
 
-![](/others/zxlz/624404ed08cb10db.png)
+![](/others/zxlz/113.png)
 
 ### 如果您 **"**** 自学半年 ****java"** 只是这样，您挺可怜的
