--- a/docs/article/芷溪列传.md
+++ b/docs/article/芷溪列传.md
@@ -10,7 +10,7 @@
 
 感谢这位大佬提供的素材，这里不方便透露信息
 
-![](/others/zxlz/0.jpg)
+![](/others/zxlz/0.png)
 
 在这一段中，只是一个人的了解，不是完整的事件，比较重要的内容我会粗体标出
 
@@ -28,16 +28,16 @@
 
 然后他就加进了大佬的QQ群，进行更深入的交流，对此，大佬的回复
 
-![](/others/zxlz/1.jpg)而后复制哥的评价是 （原素材提供时是这样称呼）
+![](/others/zxlz/1.png)而后复制哥的评价是 （原素材提供时是这样称呼）
 
 " **我都学了半年**** Java ****，你们看不起我？！"**
 
-![](/others/zxlz/2.jpg)
+![](/others/zxlz/2.png)
 
 后面遭到各位大佬的一致攻击。后面就不知道他去哪里了
 
-![](/others/zxlz/3.jpg)
-![](/others/zxlz/4.jpg)
+![](/others/zxlz/3.png)
+![](/others/zxlz/4.png)
 
 
 直到2023/1/24
@@ -60,7 +60,7 @@
 
 b站言论补充
 
-![](/others/zxlz/5.jpg)
+![](/others/zxlz/5.png)
 
 ## 部分事件
 
@@ -70,20 +70,20 @@ b站言论补充
 
 ### 用yum辅助自己写插件
 
-![](/others/zxlz/6.jpg)
+![](/others/zxlz/6.png)
 
 相关言论比较久，不太好找
 
 ### TAB插件RGB颜色
 
-![](/others/zxlz/7.jpg)
-![](/others/zxlz/8.jpg)
-![](/others/zxlz/9.jpg)
+![](/others/zxlz/7.png)
+![](/others/zxlz/8.png)
+![](/others/zxlz/9.png)
 
 芷溪对于此事的回应
 
-![](/others/zxlz/10.jpg)
-![](/others/zxlz/11.jpg)
+![](/others/zxlz/10.png)
+![](/others/zxlz/11.png)
 
 告诉他文档只是个示例，不是直接让他复制的，可是他很固执
 
@@ -93,7 +93,7 @@ b站言论补充
 
 复制哥由此而来
 
-![](/others/zxlz/12.jpg)
+![](/others/zxlz/12.png)
 
 
 ### lp权限组剩余时间
@@ -102,7 +102,7 @@ b站言论补充
 
 他问为什么他输出的变量是空白
 
-![](/others/zxlz/13.jpg)这是文档的内容
+![](/others/zxlz/13.png)这是文档的内容
 
 群里大佬把文档截图给他看，重点截图 临时权限组 不在这个权限组返回空白之类的这些话
 
@@ -112,11 +112,11 @@ b站言论补充
 
 然后群里大佬让他lp editor，结果他截图截一小块，大概这个样子
 
-![](/others/zxlz/14.jpg)
+![](/others/zxlz/14.png)
 
 群内大佬让他截图全，他截图全了，接着群里大佬在他截图上进行截图，模仿如下：
 
-![](/others/zxlz/15.jpg)
+![](/others/zxlz/15.png)
 
 群内大佬重点截图了文档中 临时权限组 几个字
 
@@ -151,39 +151,39 @@ b站言论补充
 
 布莱克群一致对外，他就加了trmenu群，然后装不认识我
 
-![](/others/zxlz/16.jpg)
-![](/others/zxlz/17.jpg)
+![](/others/zxlz/16.png)
+![](/others/zxlz/17.png)
 
-![](/others/zxlz/18.jpg)
-![](/others/zxlz/19.jpg)
+![](/others/zxlz/18.png)
+![](/others/zxlz/19.png)
 
-![](/others/zxlz/20.jpg)
+![](/others/zxlz/20.png)
 
-![](/others/zxlz/21.jpg)
-![](/others/zxlz/22.jpg)
+![](/others/zxlz/21.png)
+![](/others/zxlz/22.png)
 
 
 
 ### 正义人
 
 
-![](/others/zxlz//92681f1b65abf564.jp.jpg)
+![](/others/zxlz/23.png)
 
 
 
 芷溪正义人的做法
 
-![](/others/zxlz/23.jpg)
-![](/others/zxlz/24.jpg)
-![](/others/zxlz//6bbf946f4b75180b.jp.jpg)
+![](/others/zxlz/24.png)
+![](/others/zxlz/25.png)
+![](/others/zxlz/26.png)
 
 当我再去加时
 
-![](/others/zxlz//5555ba96c6a218b6.jp.jpg)
+![](/others/zxlz/27.png)
 
-![](/others/zxlz/25.jpg)
+![](/others/zxlz/28.png)
 
-![](/others/zxlz/26.jpg)
+![](/others/zxlz/29.png)
 
 在spigot里怎么写一个自定义事件并且在主类中调用它？
 
@@ -195,16 +195,17 @@ b站言论补充
 
  看到文章后芷溪大佬的回应
 
-![](/others/zxlz//9a3a94df272102b1.jp.jpg)
+![](/others/zxlz/30.png)
 
 
 
-![](/others/zxlz//a5221d5658931b58.jp.jpg)
+![](/others/zxlz/31.png)
 
-![](/others/zxlz/27.jpg)
+![](/others/zxlz/32.png)
 
-![](/others/zxlz/28.jpg)
-![](/others/zxlz/29.jpg)![](/others/zxlz/30.jpg)
+![](/others/zxlz/33.png)
+![](/others/zxlz/34.png)
+![](/others/zxlz/35.png)
 
  这里的。。。和一开始说的芷溪，是同一个人，这个只是他的小号而已，也就是我们的复制哥，不要小看我们的复制哥，论嘴硬和不认账，他称第二，我们是不敢称第一的，因为我们都没那么厚的脸皮
 
@@ -216,9 +217,10 @@ b站言论补充
 
  在这之后他主动加了我，请求我删文章，截图几句给大家看看
 
-![](/others/zxlz//3b8b40cadf2dad21.jp.jpg) ![](/others/zxlz//1b71b17f05df6ae8.jp.jpg)
+![](/others/zxlz/36.png)
+![](/others/zxlz/37.png)
 
-![](/others/zxlz/31.jpg)
+![](/others/zxlz/38.png)
 
 ## 退圈
 
@@ -226,11 +228,11 @@ b站言论补充
 
 时间：2023年1月27日晚上
 
-![](/others/zxlz/32.jpg)
+![](/others/zxlz/39.png)
 
 我不理解，这便是行使正义的方式
 
-![](/others/zxlz//666ff1bbb2a763e1.jp.jpg)
+![](/others/zxlz/40.png)
 
 关于芷溪大佬的事远不如此，还有更多的事情我没能写出来，非常抱歉！
 
@@ -242,105 +244,105 @@ b站言论补充
 
 这篇文章正好被这位看到了
 
-![](/others/zxlz/33.jpg)
+![](/others/zxlz/41.png)
 
-![](/others/zxlz/34.jpg)
+![](/others/zxlz/42.png)
 
 所以就有了...、
 
 ### 怎么在主类中使用另一个类的方法？
 
-![](/others/zxlz/35.jpg)
+![](/others/zxlz/43.png)
 
-![](/others/zxlz/36.jpg)
+![](/others/zxlz/44.png)
 
 说好的截图呢，怎么直接把源码用文本发来
 
 看我多照顾你们的体验
 
-![](/others/zxlz/37.jpg)
+![](/others/zxlz/45.png)
 
 ### 怎么赋值啊
 
-![](/others/zxlz/38.jpg)
+![](/others/zxlz/46.png)
 
 ### 填什么参数？
 
-![](/others/zxlz/39.jpg)
+![](/others/zxlz/47.png)
 
 ### 我tm会Java啊
 
-![](/others/zxlz/40.jpg)
+![](/others/zxlz/48.png)
 
 ### 我TM问个问题就说我Java不好
 
-![](/others/zxlz/41.jpg)
+![](/others/zxlz/49.png)
 
 ### 这个做不到所以才来问的
 
-![](/others/zxlz/42.jpg)
+![](/others/zxlz/50.png)
 
-![](/others/zxlz/43.jpg)
+![](/others/zxlz/51.png)
 
-![](/others/zxlz/44.jpg)
+![](/others/zxlz/52.png)
 
 ### 你是sb吗？
 
-![](/others/zxlz/45.jpg)
+![](/others/zxlz/53.png)
 
 ### 不如你牛逼 艹
 
-![](/others/zxlz/46.jpg)
+![](/others/zxlz/54.png)
 
 ### 脑瘫 我不知道怎么说这段
 
-![](/others/zxlz/47.jpg)
+![](/others/zxlz/55.png)
 
-![](/others/zxlz/48.jpg)
+![](/others/zxlz/56.png)
 
-![](/others/zxlz/49.jpg)
+![](/others/zxlz/57.png)
 
 ### 教你数学老师java也比教你强的
 
-![](/others/zxlz/50.jpg)
+![](/others/zxlz/58.png)
 
 ### 没 有 提 示
 
-![](/others/zxlz/51.jpg)
+![](/others/zxlz/59.png)
 
-![](/others/zxlz/52.jpg)
+![](/others/zxlz/60.png)
 
 ### 灵活的会与不会
 
-![](/others/zxlz/53.jpg)
+![](/others/zxlz/61.png)
 
 ### 不会java基础跟写插件有什么关系？
 
-![](/others/zxlz/54.jpg)
+![](/others/zxlz/62.png)
 
-![](/others/zxlz/55.jpg)
+![](/others/zxlz/63.png)
 
-![](/others/zxlz/56.jpg)
+![](/others/zxlz/64.png)
 
-![](/others/zxlz/57.jpg)
+![](/others/zxlz/65.png)
 
 ### 大佬一定自己写的名为java的语言自己用
 
-![](/others/zxlz/58.jpg)
+![](/others/zxlz/66.png)
 
-![](/others/zxlz/59.jpg)
+![](/others/zxlz/67.png)
 
-![](/others/zxlz/60.jpg)
+![](/others/zxlz/68.png)
 
-![](/others/zxlz/61.jpg)
+![](/others/zxlz/69.png)
 
-![](/others/zxlz/62.jpg)
+![](/others/zxlz/70.png)
 
-![](/others/zxlz/63.jpg)
+![](/others/zxlz/71.png)
 
-![](/others/zxlz/64.jpg)
+![](/others/zxlz/72.png)
 
-![](/others/zxlz/65.jpg)
+![](/others/zxlz/73.png)
 
 ## 白色的小熊被封号
 
@@ -352,9 +354,9 @@ b站言论补充
 
 (出处: Minecraft(我的世界)中文论坛)
 
-![](/others/zxlz/66.jpg)
+![](/others/zxlz/74.png)
 
-![](/others/zxlz/67.jpg)
+![](/others/zxlz/75.png)
 
 ## 怎么又过来
 
@@ -364,7 +366,7 @@ b站言论补充
 
 [程杰列传](../4sua6s)
 
-![](/others/zxlz/68.jpg)
+![](/others/zxlz/76.png)
 
 我直接在mcbbs茶馆发我整理的yumc乐子，我还真没想过被封呢
 
@@ -372,35 +374,35 @@ b站言论补充
 
 大家自己品品
 
-![](/others/zxlz/69.jpg)
+![](/others/zxlz/77.png)
 
 ### 呜呜呜对不起我错了
 
-![](/others/zxlz/70.jpg)
+![](/others/zxlz/78.png)
 
 ### 开始有围观的了
 
-![](/others/zxlz/71.jpg)
+![](/others/zxlz/79.png)
 
 目前，很多还是我自己编辑的
 
-![](/others/zxlz/72.jpg)
+![](/others/zxlz/80.png)
 
 ### 诽谤 抹黑
 
-![](/others/zxlz/73.jpg)
+![](/others/zxlz/81.png)
 
 ### 《就算是真的》
 
 你是哪个sb明星的粉丝吗
 
-![](/others/zxlz/74.jpg)
+![](/others/zxlz/82.png)
 
-![](/others/zxlz/75.jpg)
+![](/others/zxlz/83.png)
 
-![](/others/zxlz/76.jpg)
+![](/others/zxlz/84.png)
 
-![](/others/zxlz/77.jpg)
+![](/others/zxlz/85.png)
 
 ### 真理
 
@@ -410,132 +412,132 @@ B:怎么诽谤的
 
 A:他们把我做过的事说了一遍
 
-![](/others/zxlz/78.jpg)
+![](/others/zxlz/86.png)
 
-![](/others/zxlz/79.jpg)
+![](/others/zxlz/87.png)
 
-![](/others/zxlz/80.jpg)
+![](/others/zxlz/88.png)
 
-![](/others/zxlz/81.jpg)
+![](/others/zxlz/89.png)
 
 ### 大佬看不惯繁体字
 
-![](/others/zxlz/82.jpg)
+![](/others/zxlz/90.png)
 
 ### 真理-总结
 
-![](/others/zxlz/83.jpg)
+![](/others/zxlz/91.png)
 
-![](/others/zxlz/84.jpg)
+![](/others/zxlz/92.png)
 
 ### 《即使都是真的》《你说是吧》
 
-![](/others/zxlz/85.jpg)
+![](/others/zxlz/93.png)
 
 ### 我掩盖啥了？
 
 你确实没掩盖，你想掩盖，但是盖不住
 
-![](/others/zxlz/86.jpg)
+![](/others/zxlz/94.png)
 
 ### 改不改和你有关系吗？
 
 哦？那您到底是改了还是没改呢？
 
-![](/others/zxlz/87.jpg)
+![](/others/zxlz/95.png)
 
 ### "正义的责问"
 
 又开始这样子了，自己以为自己站在"正义"的一方
 
-![](/others/zxlz/88.jpg)
+![](/others/zxlz/96.png)
 
 ### 真理-朽木不可雕
 
-![](/others/zxlz/89.jpg)
+![](/others/zxlz/97.png)
 
-![](/others/zxlz/90.jpg)
+![](/others/zxlz/98.png)
 
-![](/others/zxlz/91.jpg)
+![](/others/zxlz/99.png)
 
-![](/others/zxlz/92.jpg)
+![](/others/zxlz/100.png)
 
 ### 。。6
 
 其实吧，确实关掉了，因为当时我是发布成网页的
 
-![](/others/zxlz/93.jpg)
+![](/others/zxlz/101.png)
 
 我确实是关掉这个网页了
 
 就他那个截图那时候的聊天，聊完发trmenu群（还是布莱克群来着？）大家都觉得你很好笑，建议我不要删文档
 
-![](/others/zxlz/94.jpg)
+![](/others/zxlz/102.png)
 
-![](/others/zxlz/95.jpg)
+![](/others/zxlz/103.png)
 
 当时我以为他知道我说的网页指的是什么hh
 
-![](/others/zxlz/96.jpg)
+![](/others/zxlz/104.png)
 
-![](/others/zxlz/97.jpg)
+![](/others/zxlz/105.png)
 
-![](/others/zxlz/98.jpg)
+![](/others/zxlz/106.png)
 
-![](/others/zxlz/99.jpg)
+![](/others/zxlz/107.png)
 
-![](/others/zxlz/100.jpg)
+![](/others/zxlz/108.png)
 
-![](/others/zxlz/101.jpg)
+![](/others/zxlz/109.png)
 
 ### 您这么以自我为中心的吗
 
-![](/others/zxlz/102.jpg)
+![](/others/zxlz/110.png)
 
-![](/others/zxlz/103.jpg)
+![](/others/zxlz/111.png)
 
 ### 看私聊
 
-![](/others/zxlz/104.jpg)
+![](/others/zxlz/112.png)
 
 请您不要去祸害插件，非常感谢
 
 #### 即 看说的是不是事实
 
-![](/others/zxlz//d7bfff7e5bb569d2.jp.jpg)
+![](/others/zxlz/113.png)
 
 ### 又来了
 
-![](/others/zxlz/105.jpg)
+![](/others/zxlz/114.png)
 
-![](/others/zxlz/106.jpg)
+![](/others/zxlz/115.png)
 
-![](/others/zxlz/107.jpg)
+![](/others/zxlz/116.png)
 
 这只是一小部分，他又用起了他可笑的软件/脚本
 
 ### 就怪好笑的
 
-![](/others/zxlz//baaf4dce2ef5c1f9.jp.jpg)
+![](/others/zxlz/117.png)
 
 ### 看一下这里头的内容
 
-![](/others/zxlz/108.jpg)
+![](/others/zxlz/118.png)
 
 这一个真的太弱智了，他不会以为真能删吧
 
-![](/others/zxlz/109.jpg)
+![](/others/zxlz/119.png)
 
 还有这一个赚钱方法.zip
 
-![](/others/zxlz/110.jpg)
+![](/others/zxlz/120.png)
 
-![](/others/zxlz/111.jpg)
+![](/others/zxlz/121.png)
 
 这个jar才2kb，里面两个class
 
-![](/others/zxlz/112.jpg)
+![](/others/zxlz/122.png)
 
-![](/others/zxlz/113.jpg)
+![](/others/zxlz/123.png)
 
 ### 如果您 **"**** 自学半年 ****java"** 只是这样，您挺可怜的
